# Held

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.yaml  rust-toolchain.toml
.github/workflows/: rust.yml
held_core/: Cargo.toml
held_core/src/: lib.rs  plugin.rs
held_core/src/interface/: app.rs  buffer.rs  cursor.rs  mod.rs  monitor.rs  terminal.rs  workspace.rs
held_core/src/utils/: mod.rs  position.rs  range.rs  rectangle.rs
held_core/src/view/: colors.rs  mod.rs  style.rs
held_core/src/view/render/: cell.rs  mod.rs
src/: app.rs  errors.rs  main.rs  workspace.rs
src/application/: mod.rs  state.rs
src/application/handler/: app.rs  buffer.rs  command.rs  cursor.rs  delete.rs  insert.rs  mod.rs  monitor.rs  normal.rs  search.rs  workspace.rs
src/application/mode/: command.rs  delete.rs  error.rs  insert.rs  mod.rs  motion.rs  normal.rs  replace.rs  search.rs  workspace.rs
src/application/plugin_interafce/: app.rs  buffer.rs  cursor.rs  mod.rs  monitor.rs  workspace.rs
src/buffer/: cursor.rs  gap_buffer.rs  mod.rs
src/buffer/operation/: delete.rs  group.rs  history.rs  insert.rs  mod.rs  replace.rs
src/config/: appconfig.rs  lastline_cmd.rs  mod.rs
src/modules/: mod.rs
src/modules/input/: default.yaml  mod.rs
src/modules/perferences/: default.yaml  mod.rs  yaml.rs
src/plugin/: mod.rs  system.rs
src/util/: distance.rs  line_iterator.rs  log_util.rs  mod.rs  position.rs  range.rs
src/utils/: buffer.rs  cursor.rs  file.rs  input.rs  log_util.rs  mod.rs  reg.rs  style.rs  term_io.rs  terminal.rs  undotree.rs
src/utils/ui/: event.rs  mod.rs  uicore.rs  undotree.rs
src/utils/ui/mode/: common.rs  mod.rs  (+5 more)
src/view/: mod.rs  presenter.rs  status_data.rs  theme_loadler.rs
src/view/colors/: map.rs  mod.rs
src/view/monitor/: mod.rs  scroll_controller.rs
src/view/render/: lexeme_mapper.rs  line_number_string_iter.rs  mod.rs  render_buffer.rs  render_state.rs  renderer.rs
src/view/terminal/: cross_terminal.rs  mod.rs
test/test_render_plugin/: Cargo.toml
test/test_render_plugin/src/: lib.rs
test_render_plugin/: Cargo.toml
test_render_plugin/src/: lib.rs
