[package]
name = "held"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "held_core"
]

[features]
dragonos = []

[dependencies]
# 控制term
crossterm = "0.27"
lazy_static = "1.4"

# 命令解析
clap = { version = "4.4.7",features = ["derive"] }

# 日志
simplelog = "^0.12.1"
log = "0.4"

# 解析配置文件
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# 定义标志位
bitflags = "2.4.2"

# 加载插件
libloading = "0.8.5"
walkdir = "2.5.0"

held_core = { path = "./held_core", version = "*" }
unicode-segmentation = "1.12.0"
syntect = "5.2.0"
error-chain = "0.12.4"

